<resources>
    <string name="app_name">WIG</string>
    <string name="app_slogan">An inventory management service to remember \"What I Got\"</string>
    <string name="sign_up">Sign-Up</string>
    <string name="signup_description">Please enter your credentials to start an account</string>
    <string name="self_hosting_title">Self Hosted</string>
    <string name="self_host_description">Please follow these instructions first to connect to your WIG server"</string>
    <string name="reset_password">Reset Your Password</string>
    <string name="enter_email">Please enter email address. You will receive an email address with instructions on how to reset your password.</string>
    <string name="or">or</string>
    <string name="send">Send</string>
    <string name="sent_email_part1">We sent an Email to:</string>
    <string name="sent_email_part2">Check your email and click on the change password link to continue</string>
    <string name="verify_email">Verify Your Email</string>
    <string name="sent_email_part2_verify">Check your email and click on the confirmation link to continue</string>
    <string name="table_description">Table to populate.</string>
    <string name="search">Search</string>
    <string name="add">Add New</string>
    <string name="location">Location</string>
    <string name="shelf">Shelf</string>
    <string name="bag">Bag</string>
    <string name="item">Item</string>

    <!-- Input field hints -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="hostname">Hostname</string>
    <string name="port_number">Port Number</string>
    <!-- Input field hints -->

    <!-- Button titles -->
    <string name="already_have_account">Already have an account</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign-Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="connect">Connect</string>
    <string name="ic_exit">Exit</string>
    <string name="resend_email">Resend Email</string>
    <string name="place">Place</string>
    <string name="unpack">Unpack</string>
    <string name="check_out">Check Out</string>
    <string name="clear">Clear</string>
    <string name="settings">Settings</string>
    <string name="inventory">Manage Inventory</string>
    <string name="borrowed_out">Borrowed Items</string>
    <string name="scanner">Scanner</string>
    <string name="items">Items</string>
    <string name="locations">Locations</string>
    <!-- Button titles -->

    <!-- Error messages, to be replaced by errors from API -->
    <string name="invalid_user_password">Invalid Username or Password</string>
    <string name="empty_login_credentials">Please provide valid login credentials</string>
    <string name="required_fields">Please enter all required fields</string>
    <string name="table_name">Name</string>
    <string name="table_location">Location</string>
    <string name="table_quantity">Quantity</string>
    <string name="table_location_parent">Location</string>
    <string name="table_location_type">Type</string>
    <string name="password_mismatch">Passwords do not match</string>
    <string name="email_not_valid">Not a valid email address</string>
    <string name="wrong_username_criteria">Username does not match criteria</string>
    <string name="wrong_password_criteria">Password does not match criteria</string>
    <!-- Error messages, to be replaced by errors from API -->

    <string name="location_type_prompt">Type</string>
    <string name="no_location">No location</string>
    <string name="self">Self</string>
    <string name="sound_on_scan">Sound On Scan</string>
    <string name="app_opens_to">App Opens To:</string>
    <string name="logout">Logout</string>
    <string name="vibrate_on_scan">Vibrate On Scan</string>
    <string name="wig_server_not_recognized">WIG Server not recognized</string>
    <string name="return_all">Return All</string>
    <string name="create_new">Create New</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="qr_code">QR-Code</string>
    <string name="edit_location">Edit Location</string>
    <string name="qr">QR</string>
    <string name="enter_qr">Enter QR</string>
    <string name="tags">Tags</string>
    <string name="enter_tags">Enter Tags</string>
    <string name="notes_description">Notes/Description</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="save">Save</string>
    <string name="edit_ownership">Edit Ownership</string>
    <string name="disconnect">Disconnect</string>
    <string name="unpacked_items">Unpacked Items</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="default_location">Default Location</string>
    <string name="delete">delete</string>
    <string name="there_was_an_error_making_request">There was an error making request</string>
    <string name="reset_password_instructions">Enter your email address to reset your password</string>

    <string-array name="location_types">
        <item>Item</item>
        <item>Location</item>
    </string-array>

    <string-array name="start_view">
        <item>Scanner</item>
        <item>Inventory</item>
    </string-array>


</resources>