<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/ic_self_host"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_settings"
        android:background="@null"
        android:contentDescription="@string/self_hosting"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleType="centerCrop"
        />

    <LinearLayout
        android:id="@+id/login_page_titles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_page_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="65sp"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/login_page_app_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_slogan"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/login_page_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textbox_background"
        android:inputType="text|textNoSuggestions"
        android:autofillHints="username"
        android:padding="5dp"
        android:ems="13"
        android:hint="@string/username"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/login_page_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_page_titles" />

    <EditText
        android:id="@+id/login_page_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textbox_background"
        android:padding="5dp"
        android:ems="13"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48sp"
        android:autofillHints="password"
        app:layout_constraintBottom_toTopOf="@id/linear_login_page_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_page_username" />

    <TextView
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/login_page_password"
        app:layout_constraintRight_toRightOf="@id/login_page_password"
        />

    <LinearLayout
        android:id="@+id/linear_login_page_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_page_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/login_page_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/login_page_signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_button"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>