<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">

    <ImageButton
        android:id="@+id/ic_exit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:contentDescription="@string/ic_exit"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_exit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:id="@+id/titles"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_hosting_title"
            android:textSize="60sp"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/app_slogan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_host_description"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/hostname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textbox_background"
        android:inputType="text|textNoSuggestions"
        android:autofillHints="hostname"
        android:padding="5dp"
        android:ems="13"
        android:hint="@string/hostname"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@id/port_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titles" />

    <EditText
        android:id="@+id/port_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/textbox_background"
        android:padding="5dp"
        android:ems="13"
        android:hint="@string/port_number"
        android:inputType="number"
        android:minHeight="48sp"
        android:autofillHints="@string/port_number"
        app:layout_constraintBottom_toTopOf="@id/linear_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hostname" />

    <TextView
        android:id="@+id/forgot_password"
        android:text="@string/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/port_number"
        app:layout_constraintRight_toRightOf="@id/port_number"
        />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_dark"
        android:padding="5dp"
        android:textSize="19sp"
        app:layout_constraintTop_toBottomOf="@id/forgot_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <LinearLayout
        android:id="@+id/linear_buttons"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent=".3"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/connect_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            android:textSize="25sp"
            android:layout_gravity="center"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>